fix z-index menu mobile

--- a/src/styles/_contact-us.scss
+++ b/src/styles/_contact-us.scss
@@ -61,6 +61,7 @@
   &__button {
     margin-top: 40px;
     position: relative;
+    left: calc(50% - 140px);
     width: 280px;
     height: 60px;
     background: $mainButtoncolor;
