--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -295,6 +295,7 @@
 
   .header__nav {
     margin-top: 10px;
+    z-index: 20;
   }
 
   .nav__toggler-label {
